[package]
name = "hide"
authors = ["treize <darktreize@hotmail.fr>"]
version = "0.6.0"
edition = "2021"
description = "Hide your files v0.6.0"

[dependencies]
rpassword = "7.3"
rand = "0.8"
clap = "4.5"
zeroize = "1.8.1"
sysinfo = "0.32.0"
walkdir = "2.5.0"
tar = "0.4.43"
zip = "2.2.0"
ring = "0.17"

[features]
default = []
windows = ["winapi"]

[profile.release]
lto = true

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", optional = true, features = ["fileapi", "winnt"] }
