[package]
name = "hide"
authors = ["treize <darktreize@hotmail.fr>"]
version = "0.7.0"
edition = "2021"
description = "Hide your files v0.6.3"

[dependencies]
rpassword = "7.4"
rand = "0.9"
clap = "4.5"
zeroize = "1.8.1"
sysinfo = "0.35"
walkdir = "2.5.0"
tar = "0.4.44"
zip = "4.0.0"
ring = "0.17"

[features]
default = []

[profile.release]
lto = true
